--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
 						</ul>
 					</nav>
 
-					<button class="menu-section__button">Заказать звонок</button>
+					<button class="menu-section__button">Записаться</button>
 				</div>
 			</section>
 			
 
 			<section class="condiv section">
 				<div class="condiv-section__div container">
-					<h1 class="con-div__title">GAME OVER</h1>
-					<p class="con-div__paragraph">Новый формат игр и отдыха</p>
+					<h1 class="con-div__title">ADVANCE</h1>
+					<p class="con-div__paragraph">Центр иностранных языков</p>
 
 					<div class="condiv-section__addition-div">
 						<div class="addition-div__first-div">
@@ -52,7 +52,7 @@
 						</div>
 					</div>
 
-					<button class="condiv-section__button">Забронировать</button>
+					<button class="condiv-section__button">Записаться</button>
 				</div>
 
 				<a href="#rest-section" class="header__down"></a>
@@ -89,23 +89,23 @@
 
 			<section class="sal-section section">
 				<div class="sal-section__div container">
-					<h2 class="sal-section__title">наши залы</h2>
+					<h2 class="sal-section__title">Услуги</h2>
 
 					<ul>
 						<li class="sal-section__li vibe">
-							<p class="sal-section__paragraph">80’s vibes</p>
+							<p class="sal-section__paragraph">Английский</p>
 						</li>
 
 						<li class="sal-section__li war">
-							<p class="sal-section__paragraph">star wars</p>
+							<p class="sal-section__paragraph">Китайский</p>
 						</li>
 
 						<li class="sal-section__li west">
-							<p class="sal-section__paragraph">wild west</p>
+							<p class="sal-section__paragraph">Домашняя работа на 5+</p>
 						</li>
 
 						<li class="sal-section__li neon">
-							<p class="sal-section__paragraph">neon style</p>
+							<p class="sal-section__paragraph">Для дошкольников</p>
 						</li>
 					</ul>
 				</div>
