main page till the end

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
 			<section class="menu-section section">
 				<div class="menu-section__divcon container">
 					<div class="menu-section__logo">
-						<a href="#" class="menu-section__img-link"><img src="img/logo.svg" alt="go" class="menu-section__img"></a>
+						<a href="#" class="menu-section__img-link"><img style="height: 80px; width: 120px;" src="img/1.jpg" alt="go" class="menu-section__img"></a>
 					</div>
 					<nav class="menu-section__nav">
 						<ul class="menu-section__list">
-							<li class="menu-section__item"><a href="#" class="menu-section__link">залы</a></li>
-
 							<li class="menu-section__item"><a href="#" class="menu-section__link">О нас</a></li>
 
-							<li class="menu-section__item"><a href="#" class="menu-section__link">Бронь</a></li>
+							<li class="menu-section__item"><a href="#" class="menu-section__link">Английский</a></li>
 
-							<li class="menu-section__item"><a href="#" class="menu-section__link">отзывы</a></li>
+							<li class="menu-section__item"><a href="#" class="menu-section__link">Китайский</a></li>
+
+							<li class="menu-section__item"><a href="#" class="menu-section__link">Другое</a></li>
 
 							<li class="menu-section__item"><a href="#" class="menu-section__link">Контакты</a></li>
 						</ul>
@@ -40,15 +40,15 @@
 					<div class="condiv-section__addition-div">
 						<div class="addition-div__first-div">
 							<p class="addition-div__text addition-div__text__pink addition-div__text_4">4</p>
-							<p class="addition-div__text">Тематических
-зала</p>
+							<p class="addition-div__text">Преподавателей
+носителей</p>
 						</div>
 
 						<div class="addition-div__second-div">
 							<p class="addition-div__text addition-div__text__pink addition-div__text_small">new</p>
 							
 							<p class="addition-div__text">Новейшая
-аппаратура</p>
+методика</p>
 						</div>
 					</div>
 
@@ -62,26 +62,34 @@
 		<main>
 			<section class="rest-section section" id="rest-section">
 				<div class="container">
-					<h2 class="rest-section__title">У нас есть все для классного 
-					отдыха с друзьями!</h2>
+					<h2 class="rest-section__title">Наши преимущества</h2>
 					<ul class="rest-section__list">
-						<li class="rest-section__item vr-glasses">
-							<p class="rest-section__text">VR очки</p>
+						<li class="rest-section__item rest-1">
+							<p class="rest-section__text">Уникальная
+авторская методика
+без зубрежки</p>
 						</li>
-						<li class="rest-section__item audio">
-							<p class="rest-section__text">Аудио-система 5.1 с отличным звуком</p>
+						<li class="rest-section__item rest-2">
+							<p class="rest-section__text">Индивидуальный
+план по достижению
+ваших целей</p>
 						</li>
-						<li class="rest-section__item karaoke">
-							<p class="rest-section__text">Караоке (4 микрофона)</p>
+						<li class="rest-section__item rest-3">
+							<p class="rest-section__text">Наши студенты успешно
+сдают международные
+экзамены</p>
 						</li>
-						<li class="rest-section__item card-game">
-							<p class="rest-section__text">Настольные игры</p>
+						<li class="rest-section__item rest-4">
+							<p class="rest-section__text">Подготовка к поступлению</p>
 						</li>
-						<li class="rest-section__item cinema">
-							<p class="rest-section__text">Кино сервисы Netflix, IVI, MegoGo, КиноПоиск, Okko</p>
+						<li class="rest-section__item rest-5">
+							<p class="rest-section__text">Обучение детей —
+наше приоритетное
+направление</p>
 						</li>
-						<li class="rest-section__item ps5">
-							<p class="rest-section__text">РlаyStаtiоn 5</p>
+						<li class="rest-section__item rest-6">
+							<p class="rest-section__text">Собственный центр для
+преподавателей</p>
 						</li>
 					</ul>
 				</div>
@@ -117,28 +125,26 @@
 					<h2 class="linkabout-section__title">О нас</h2>
 
 					<div class="linkabout-section__div-text">
-						<p class="linkabout-section__paragraph linkabout-section__paragraph-first">Для наших гостей мы создали концептуально <i>новое
-						 игровое пространство виртуальной реальности</i>
-						  в центральной части города.</p>
-						<p class="linkabout-section__paragraph linkabout-section__paragraph-second">Каждый день мы стараемся создавать для вас самую лучшую игровую атмосферу и радовать Вас топовыми игровыми разработками со всего мира</p>
+						<p class="linkabout-section__paragraph linkabout-section__paragraph-first">Курсы иностранных языков от Advance – это английский и другие популярные языки для детей и взрослых.</p>
+						<p class="linkabout-section__paragraph linkabout-section__paragraph-second">Не секрет, что владение иностранными языками открывает широкие возможности для карьерного роста, захватывающих путешествий по всему миру, организации увлекательного досуга, создания нового круга общения и самосовершенствования.</p>
 					</div>
 
 					<blockquote class="linkabout-section__blockquote">
-						<p class="linkabout-section__paragraph-blockquote"><b>GAME OVER</b> -
+						<p class="linkabout-section__paragraph-blockquote"><b>ADVANCE</b> -
 						это место 
 						незабываемых 
-						впечатлений</p>
+						уроков.</p>
 						<div class="linkabout-section__div">
 							<img src="img/feedback.png" alt="feedback" class="linkabout-section__img-div">
-							<cite class="linkabout-section__cite">Аркадий Абакшин,
-							создатель игровой 
-							территории <span lang="en">GAME OVER</span></cite>
+							<cite class="linkabout-section__cite">Анна Фоменко,
+							директрисса центра 
+							иностранных языков <span lang="en">Advance</span></cite>
 						</div>
 					</blockquote>
 				</div>
 			</section>
 
-			<section class="feedback-section section">
+			<!-- <section class="feedback-section section">
 				<div class="container">
 					<h2 class="feedback-section__title">Отзывы посетителей</h2>
 
@@ -163,9 +169,9 @@
 						<figcaption class="feedback-section__figcaption iashchienko-figcap">Никита Ященко</figcaption>
 					</figure>
 				</div>
-			</section>
+			</section> -->
 
-			<section class="question-section section">
+			<!-- <section class="question-section section">
 				<div class="container">
 					<h2 class="question-section__title">Частые вопросы</h2>
 					<ul class="question-section__list">
@@ -177,7 +183,7 @@
 					</ul>
 				</div>
 			</section>
-		</main>
+		</main> -->
 
 		<footer>
 			<section class="footer-section section">
@@ -188,8 +194,8 @@
 							<address>
 								<ul>
 									<li>
-										<p class="footer-address__item footer-address__direction-item">г. Москва 
-										ул. Аквамарина, 16</p>
+										<p class="footer-address__item footer-address__direction-item">г. Находка 
+										ул. Советская, 9а</p>
 									</li>
 
 									<li>
@@ -197,7 +203,7 @@
 									</li>
 
 									<li>
-										<p class="footer-address__item footer-address__connection-item">GameOver@gmail.com</p>
+										<p class="footer-address__item footer-address__connection-item">Advance@gmail.com</p>
 									</li>
 								</ul>
 							</address>
@@ -226,12 +232,7 @@
 
 					<div class="footer-section__design-div">
 						<div class="footer-section__first-div">
-							<p class="footer-section__design-text">© Game Over, 2022</p>
-						</div>
-
-						<div class="footer-section__second-div">
-							<p class="footer-section__design-text">Design by Anastasia Ilina</p>
-							<p class="footer-section__design-text">ilina9825@gmail.com</p>
+							<p class="footer-section__design-text">© Advance, 2023</p>
 						</div>
 					</div>
 				</div>
