--- a/eng.html
+++ b/eng.html
@@ -32,23 +32,48 @@
 		</section>
 
 		<section class="eng-section section">
-			<div class="eng-section__desc-div container">
-				<div class="eng-section__desc">
-					<p class="eng">Английский</p>
+
+			<div class="eng-section__div">
+				<h2 class="eng-section__title">Курсы английского языка</h2>
+				<p class="eng-section__p">Учили английский в школе, немного помните лексику и грамматику, но не говорите? Испытываете страх и стеснение, когда слышите иностранную речь? Не воспринимаете или плохо воспринимаете английскую речь на слух? Хотите поставить произношение и узнать разговорные фразы для реальных ситуаций общения? </p>
+			</div>
+
+
+			<div class="div__list">
+					<ul class="eng-section__list">
+						<li class="eng-section__item">Обучение в нашем центре иностранных
+	языков «ADVANCE» проходит в группах.
+	Преимущества групповых уроков заключается в
+	том, что в группе студенты учатся
+	коммуникации, могут общаться между собой,
+	борются со страхом и стеснением общения,
+	выступлением перед публикой, а также заводят
+	новые знакомства.</li>
+						<li class="eng-section__item">Наш центр оказывает индивидуальный
+	подход к каждому ученику. Преподаватели
+	нашего центра всегда контролируют процесс
+	обучения всей группы, всегда помогут с
+	трудностями. А также мы организовываем
+	бесплатные уроки для тех учеников, кому по
+	каким-либо причинам нужно чуть больше время
+	для усвоения материала.Наш центр оказывает индивидуальный
+	подход к каждому ученику. Преподаватели
+	нашего центра всегда контролируют процесс
+	обучения всей группы, всегда помогут с
+	трудностями. А также мы организовываем
+	бесплатные уроки для тех учеников, кому по
+	каким-либо причинам нужно чуть больше время
+	для усвоения материала.</li>
+						<li class="eng-section__item">На наших уроках никакого русского! Мы
+	окунем Вас в естественную среду общения,
+	учим смело и свободно общаться на
+	английском языке!</li>
+						<li class="eng-section__item">Мы делаем упор на практику! Никакой
+	«зубрежки» правил и заучивание книжных фраз,
+	топиков и т.д. Только живая речь!</li>
+					</ul>
 				</div>
 
-				<div class="eng-section__p">
-					<div class="color">
-						<ul class="color-li">
-							<li class="color-item">Вы нацелены на результат и хотите научиться свободно излагать свои мысли на английском языке?</li>
-							<li class="color-item orange">Вы боитесь общаться с иностранцами когда путешествуете? А вдруг не поймут?</li>
-							<li class="color-item">Вы хотите смотреть фильмы на английском языке и подпевать любимым песням?</li>
-							<li class="color-item orange">Вы хотите поступить в престижный ВУЗ?</li>
-							<li class="color-item">Вы понимаете, что сегодня без английского не построить карьеру?</li>
-						</ul>
-					</div>
-				</div>
-			</div>
 		</section>
 	</header>
 </body>
