--- a/cn.html
+++ b/cn.html
@@ -15,7 +15,7 @@
 				</div>
 				<nav class="menu-section__nav">
 					<ul class="menu-section__list">
-						<li class="menu-section__item"><a href="abt.html" class="menu-section__link">О нас</a></li>
+						<li class="menu-section__item"><a href="index.html" class="menu-section__link">О нас</a></li>
 
 						<li class="menu-section__item"><a href="eng.html" class="menu-section__link">Английский</a></li>
 
@@ -27,17 +27,31 @@
 					</ul>
 				</nav>
 
-				<button class="menu-section__button">Записаться</button>
-			</div>
-		</section>
-
-		<section class="cn-section section">
-			<div class="cn-section__desc-div container">
-				<div class="cn-section__desc">
-					<p class="cn">Китайский</p>
-				</div>
+				<button onclick="window.location.href = 'button.html';" class="menu-section__button">Записаться</button>
 			</div>
 		</section>
 	</header>
+
+	<section class="cn-section section">
+		<div class="cn-section__div">
+			<h2 class="cn-section__title">Курсы китайского языка</h2>
+			<p class="cn-section__p">Не каждый решиться выучить китайский язык самостоятельно. Кто-то посчитает это слишком сложной задачей, а кому-то не хватит смелости даже попробовать. Но в жизни случаются разные ситуации, подталкивающие нас к новым вершинам. 
+Выучить китайский язык вполне реально, нужно лишь захотеть, а наш центр иностранных языков «ADVANCE» с удовольствием Вам в этом поможет! </p>
+		</div>
+
+
+		<div class="div__list">
+			<ul class="cn-section__list">
+				<li class="cn-section__item">Обучение проходит по эффективной коммуникативной методике в формате мини-групп два раза в неделю. Учебный материал насыщен игровыми элементами, что позволяет детям и взрослым легче усваивать фонетические и грамматические особенности китайского языка. 
+				</li>
+				<li class="cn-section__item">Обучение китайскому языку ведётся в комплексе: разговорная речь и письмо, лексико-грамматические задания и чтение. В учебно-методический комплекс входят: учебник, аудиоприложение и пособие по иероглифике в соответствии с каждым уроком курса. Все компоненты взаимосвязаны между собой, просты и удобны в использовании. 
+				</li>
+				<li class="cn-section__item">Обучение проводит опытный  преподаватель с девятилетним стажем работы, учебы и жизни в Китае. Наш преподаватель поставит Вам идеальное произношение,создаст вокруг реальную языковую среду и через легкость и радость поможет нашим ученикам в изучении китайского языка. 
+				</li>
+			</ul>
+		</div>
+
+		<div class="empty"></div>
+	</section>
 </body>
 </html>
