--- a/eng.html
+++ b/eng.html
@@ -15,7 +15,7 @@
 				</div>
 				<nav class="menu-section__nav">
 					<ul class="menu-section__list">
-						<li class="menu-section__item"><a href="abt.html" class="menu-section__link">О нас</a></li>
+						<li class="menu-section__item"><a href="index.html" class="menu-section__link">О нас</a></li>
 
 						<li class="menu-section__item"><a href="eng.html" class="menu-section__link">Английский</a></li>
 
@@ -27,54 +27,56 @@
 					</ul>
 				</nav>
 
-				<button class="menu-section__button">Записаться</button>
+				<button onclick="window.location.href = 'button.html';" class="menu-section__button">Записаться</button>
 			</div>
-		</section>
-
-		<section class="eng-section section">
-
-			<div class="eng-section__div">
-				<h2 class="eng-section__title">Курсы английского языка</h2>
-				<p class="eng-section__p">Учили английский в школе, немного помните лексику и грамматику, но не говорите? Испытываете страх и стеснение, когда слышите иностранную речь? Не воспринимаете или плохо воспринимаете английскую речь на слух? Хотите поставить произношение и узнать разговорные фразы для реальных ситуаций общения? </p>
-			</div>
-
-
-			<div class="div__list">
-					<ul class="eng-section__list">
-						<li class="eng-section__item">Обучение в нашем центре иностранных
-	языков «ADVANCE» проходит в группах.
-	Преимущества групповых уроков заключается в
-	том, что в группе студенты учатся
-	коммуникации, могут общаться между собой,
-	борются со страхом и стеснением общения,
-	выступлением перед публикой, а также заводят
-	новые знакомства.</li>
-						<li class="eng-section__item">Наш центр оказывает индивидуальный
-	подход к каждому ученику. Преподаватели
-	нашего центра всегда контролируют процесс
-	обучения всей группы, всегда помогут с
-	трудностями. А также мы организовываем
-	бесплатные уроки для тех учеников, кому по
-	каким-либо причинам нужно чуть больше время
-	для усвоения материала.Наш центр оказывает индивидуальный
-	подход к каждому ученику. Преподаватели
-	нашего центра всегда контролируют процесс
-	обучения всей группы, всегда помогут с
-	трудностями. А также мы организовываем
-	бесплатные уроки для тех учеников, кому по
-	каким-либо причинам нужно чуть больше время
-	для усвоения материала.</li>
-						<li class="eng-section__item">На наших уроках никакого русского! Мы
-	окунем Вас в естественную среду общения,
-	учим смело и свободно общаться на
-	английском языке!</li>
-						<li class="eng-section__item">Мы делаем упор на практику! Никакой
-	«зубрежки» правил и заучивание книжных фраз,
-	топиков и т.д. Только живая речь!</li>
-					</ul>
-				</div>
-
 		</section>
 	</header>
+
+	<section class="eng-section section">
+		<div class="eng-section__div">
+			<h2 class="eng-section__title">Курсы английского языка</h2>
+			<p class="eng-section__p">Учили английский в школе, немного помните лексику и грамматику, но не говорите? Испытываете страх и стеснение, когда слышите иностранную речь? Не воспринимаете или плохо воспринимаете английскую речь на слух? Хотите поставить произношение и узнать разговорные фразы для реальных ситуаций общения? </p>
+		</div>
+
+
+		<div class="div__list">
+			<ul class="eng-section__list">
+				<li class="eng-section__item">Обучение в нашем центре иностранных
+					языков «ADVANCE» проходит в группах.
+					Преимущества групповых уроков заключается в
+					том, что в группе студенты учатся
+					коммуникации, могут общаться между собой,
+					борются со страхом и стеснением общения,
+					выступлением перед публикой, а также заводят
+					новые знакомства.
+				</li>
+				<li class="eng-section__item">Наш центр оказывает индивидуальный
+					подход к каждому ученику. Преподаватели
+					нашего центра всегда контролируют процесс
+					обучения всей группы, всегда помогут с
+					трудностями. А также мы организовываем
+					бесплатные уроки для тех учеников, кому по
+					каким-либо причинам нужно чуть больше время
+					для усвоения материала.Наш центр оказывает индивидуальный
+					подход к каждому ученику. Преподаватели
+					нашего центра всегда контролируют процесс
+					обучения всей группы, всегда помогут с
+					трудностями. А также мы организовываем
+					бесплатные уроки для тех учеников, кому по
+					каким-либо причинам нужно чуть больше время
+					для усвоения материала.
+				</li>
+				<li class="eng-section__item">На наших уроках никакого русского! Мы
+					окунем Вас в естественную среду общения,
+					учим смело и свободно общаться на
+					английском языке!
+				</li>
+				<li class="eng-section__item">Мы делаем упор на практику! Никакой
+					«зубрежки» правил и заучивание книжных фраз,
+					топиков и т.д. Только живая речь!
+				</li>
+			</ul>
+		</div>
+	</section>
 </body>
 </html>
