--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					</div>
 					<nav class="menu-section__nav">
 						<ul class="menu-section__list">
-							<li class="menu-section__item"><a href="abt.html" class="menu-section__link">О нас</a></li>
+							<li class="menu-section__item"><a href="index.html" class="menu-section__link">О нас</a></li>
 
 							<li class="menu-section__item"><a href="eng.html" class="menu-section__link">Английский</a></li>
 
@@ -27,7 +27,7 @@
 						</ul>
 					</nav>
 
-					<button class="menu-section__button">Записаться</button>
+					<button onclick="window.location.href = 'button.html';" class="menu-section__button">Записаться</button>
 				</div>
 			</section>
 			
