--- a/other.html
+++ b/other.html
@@ -15,7 +15,7 @@
 				</div>
 				<nav class="menu-section__nav">
 					<ul class="menu-section__list">
-						<li class="menu-section__item"><a href="abt.html" class="menu-section__link">О нас</a></li>
+						<li class="menu-section__item"><a href="index.html" class="menu-section__link">О нас</a></li>
 
 						<li class="menu-section__item"><a href="eng.html" class="menu-section__link">Английский</a></li>
 
@@ -27,9 +27,78 @@
 					</ul>
 				</nav>
 
-				<button class="menu-section__button">Записаться</button>
+				<button onclick="window.location.href = 'button.html';" class="menu-section__button">Записаться</button>
 			</div>
 		</section>
 	</header>
+
+	<section class="oth1-section section">
+		<div class="oth1-section__div">
+			<h2 class="oth1-section__title">Домашнее задание на 5+</h2>
+			<p class="oth1-section__p">Родители, Вы часто сталкиваетесь с тем, что
+сложность школьного домашнего задания
+порой вызывает затруднение не только у
+ребенка, но у Вас самих?
+
+В нашем центре мы готовы оказать
+квалифицированную помощь ученикам 1-5
+классов в выполнении домашних заданий. </p>
+		</div>
+
+
+		<div class="div__list">
+			<ul class="oth1-section__list">
+				<li class="oth1-section__item">Мы создаем комфортные условия для
+продуктивной работы.
+				</li>
+				<li class="oth1-section__item">У нас ребенок психологически по-другому
+настроен на домашнюю работу.
+				</li>
+				<li class="oth1-section__item">Уроки ведут профессиональные педагоги,
+которые оказывают индивидуальный подход к
+каждому ученику.
+
+				</li>
+				<li class="oth1-section__item">Мы мотивируем ребенка для успешной
+работы и прививаем привычку делать уроки с
+удовольствием.
+				</li>
+			</ul>
+		</div>
+	</section>
+
+	<section class="oth2-section section">
+		<div class="oth2-section__div">
+			<h2 class="oth2-section__title">Дошкольное образование</h2>
+			<p class="oth2-section__p">Цель данной группы - в условиях
+эмоционального комфорта и психологической
+защищенности научить ребенка всему
+необходимому для того, чтобы он чувствовал
+себя уверенно в свой первый и последующие
+годы учебы в школе.
+
+В курс входят основы математики, чтения,
+письма, творчества, мышления, мира вокруг
+нас.</p>
+		</div>
+
+
+		<div class="div__list">
+			<ul class="oth2-section__list">
+				<li class="oth2-section__item">Подготовим руку к первым прописям, а также
+будем развивать мелкую моторику.
+				</li>
+				<li class="oth2-section__item">Освоим слова и слоги, научимся читать и
+сочинять рассказы.
+				</li>
+				<li class="oth2-section__item">Изучим цифры, геометрические фигуры и
+будем решать логические задачи.
+				</li>
+				<li class="oth2-section__item">Будем тренировать память и внимание,
+мыслить логически.
+				</li>
+			</ul>
+		</div>
+	</section>
 </body>
 </html>
