--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 							</div>
 						</div>
 
-						<img src="img/map.jpg" class="footer-section__map-img" alt="map">
+<!-- 						<img src="img/map.jpg" class="footer-section__map-img" alt="map"> -->
 					</div>
 
 					<div class="footer-section__design-div">
