--- a/cont.html
+++ b/cont.html
@@ -72,8 +72,8 @@
 							</div>
 						</div>
 
-						<img src="img/map.jpg" class="footer-section__map-img" alt="map">
-					</div>
+						<!-- <img src="img/map.jpg" class="footer-section__map-img" alt="map">
+					</div> -->
 
 					<div class="footer-section__design-div">
 						<div class="footer-section__first-div">
