--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<section class="menu-section section">
 				<div class="menu-section__divcon container">
 					<div class="menu-section__logo">
-						<a href="index.html" class="menu-section__img-link"><img style="height: 80px; width: 120px;" src="img/1.jpg" alt="go" class="menu-section__img"></a>
+						<a href="index.html" class="menu-section__img-link"><img style="height: 80px; width: 120px;" src="img/1.jpg" alt="advance" class="menu-section__img"></a>
 					</div>
 					<nav class="menu-section__nav">
 						<ul class="menu-section__list">
@@ -227,8 +227,8 @@
 							</div>
 						</div>
 
-						<img src="img/map.jpg" class="footer-section__map-img" alt="map">
-					</div>
+						<!-- <img src="img/map.jpg" class="footer-section__map-img" alt="map">
+					</div> -->
 
 					<div class="footer-section__design-div">
 						<div class="footer-section__first-div">
