--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 	<title>Advance</title>
+	<meta name="description" content="Изучение иностранных языков">
+	<meta name="keywords" content="Обучение, Английский, Китайский, языки">
+
 </head>
 <body>
 		<header>
@@ -52,7 +55,7 @@
 						</div>
 					</div>
 
-					<button class="condiv-section__button">Записаться</button>
+					<button onclick="window.location.href = 'button.html';" class="condiv-section__button">Записаться</button>
 				</div>
 
 				<a href="#rest-section" class="header__down"></a>
