--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						незабываемых 
 						уроков.</p>
 						<div class="linkabout-section__div">
-							<img src="img/feedback.png" alt="feedback" class="linkabout-section__img-div">
+							<img src="img/grigorieva.png" height="80px" width="80px" alt="feedback" class="linkabout-section__img-div">
 							<cite class="linkabout-section__cite">Анна Фоменко,
 							директрисса центра 
 							иностранных языков <span lang="en">Advance</span></cite>
@@ -230,7 +230,9 @@
 							</div>
 						</div>
 
-						<img src="img/map.jpg" class="footer-section__map-img" alt="map">
+						<!-- <img src="img/map.jpg" class="footer-section__map-img" alt="map"> -->
+					
+						<script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3A7d8df3b82acf2566cfea304e994302cdeb6e9c991e532764e5b9520abfc3f1e6&amp;width=680&amp;height=274&amp;lang=ru_RU&amp;scroll=true"></script>
 					</div>
 
 					<div class="footer-section__design-div">
