--- a/button.html
+++ b/button.html
@@ -82,7 +82,7 @@
                 <textarea placeholder="Сообщение"></textarea>
               </div>
               <div class="button">
-                <input type="button" value="Отправить" />
+                <input type="button" onclick="window.location.href = 'success.html';" value="Отправить" />
               </div>
             </form>
           </div>
